# ArabicPersian

./: .gitignore  README.md  manifest.json  pyproject.toml
.github/workflows/: validate.yml
app/: README.md  app.js  index.html  styles.css
data/: README.md
data/releases/: README.md
data/releases/maltese/: maltese_quran_arabic_script.csv  maltese_quran_arabic_script.json  maltese_quran_arabic_script_qa.json
data/releases/turkmen/: Turkmen_PersoArabic_local.csv  Turkmen_PersoArabic_local.json  Turkmen_source_correction_apply_report.json  Turkmen_v2_merge_report.json
data/source/: README.md
data/source/bangali-urdu/: bangaliurduquran.json
data/source/chechen/: arabic_text.json  chechen_arabic_script_transliteration.json  chechen_cyrillic.json  chechen_latin_transliteration.json
docs/: APP_BUILD_GUIDE.md  CODEX_EXPORT_GUIDE.md  DATA_INVENTORY.json  LANGUAGE_INDEX.md  PIPELINE_DATA_INDEX.md  PROJECT_STATUS.md  QA_REVIEW_GUIDE.md  README.md  RELEASE_CHECKLIST.md  REPOSITORY_DESCRIPTION.md  REPO_STRUCTURE.md
docs/handoff/: APP_DATA_SPEC.md  CODEX_MAIN_PROMPT.md  LICENSE_NOTES_GLOBAL.md  LOVABLE_APP_PROMPT.md  NEXT_STEPS.md  PIPELINE_SUMMARY.md  project_status.json
docs/turkmen/: Brain.json  README.md
engine/: README.md
prompts/: CODEX_KAZAKH_V2_CONTINUE_PROMPT.md  CODEX_REPO_SETUP_PROMPT.md  LOVABLE_MULTILINGUAL_APP_PROMPT.md
scripts/: build_manifest.py  build_search_index.py  extract_release_bundle.py  split_verse_lookup_by_surah.py  transliterate_maltese_arabic_script.py  validate_json_files.py
tests/: test_repo_smoke.py
(+6 files in other folders)
